# windows_text_selection

./: .gitignore  README.md  WinFormsApp1.sln
WinFormsApp1/: Form1.Designer.cs  Form1.cs
rust_text_selection/: Cargo.toml
rust_text_selection/src/: lib.rs  windows.rs
textselection/: dllmain.cpp  pch.h  selection.cpp  selection.h  textselection.vcxproj  textselection.vcxproj.filters
