[package]
name = "rust_text_selection"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]  # 生成动态库 (DLL)

[dependencies]
windows = {version="0.56.0",features= ["Win32_UI_WindowsAndMessaging", "Win32_Foundation","Win32_System_Threading","Win32_UI_Input_KeyboardAndMouse","Win32_System_DataExchange","Win32_UI_Accessibility","Win32_System_Com"] }
enigo = "0.2.0"
arboard = "3.4.0"
log = "0.4"